--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <HEAder><H1>KTX MELHOR LOJAS DE ROUPAS</H1>
+ <body>
+    <header>
+        <H1>KTX MELHOR LOJAS DE ROUPAS</H1>
         <ul>
             <li>KTX</li>
         </ul>
-    </HEAder>
-   
-</body>
+        <img src ="8519c7b360.webp" alt="8519c7b360.webp">
+    </header>
+    
+  </body>
 </html>
