--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <ul>
             <li>KTX</li>
         </ul>
-        <img src ="download-removebg-preview.png" alt="download-removebg-preview.png">
+        <img class="roupa1" src="download-removebg-preview.png" alt="download-removebg-preview.png">
     </header>
     
   </body>
-</html>
+</html> 
