--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li>KTX</li>
         </ul>
-        <img class="roupa1" src="download-removebg-preview.png" alt="download-removebg-preview.png">
+        <img class="roupa1" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif">
     </header>
     
   </body>
