--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         </ul>
    </header>
     <img class="roupa1" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif">
- 
-
-
-</header>
+ <ul> class="sla"
+    <li>99</li>
+ </ul>
   </body>
 </html> 
