--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         </ul>
    </header>
     <img class="roupa1" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif">
- <SECtion class="icones">
- <h3 class="Formas de contato" </class>
-  <img class="icones contatos" src="facebook.png" alt="icone face">
-  <img class="icones contatos" src="tiktok.png" alt="icone tiktok">
- <img class="icones contatos" src="instagram.png" alt="instagram">
-<img class="icones contatos" src="linkedin.png" alt="linkedin">
- <img class="icones contatos" src="youtube.png" alt="youtube">
- </SECtion>
+
+ 
+  <img class="icones" src="facebook.png" alt="icone face">
+  <img class="icones" src="tiktok.png" alt="icone tiktok">
+ <img class="icones" src="instagram.png" alt="instagram">
+<img class="icones" src="linkedin.png" alt="linkedin">
+ <img class="icones" src="youtube.png" alt="youtube">
+
   </body>
 </html> 
