--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Permanent+Marker&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Lilita+One&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
  <body>
     <header>
         <H1>KTX MELHOR LOJAS DE ROUPAS</H1>
-        <ul>
+        <ul class="KTX">
             <li>KTX</li>
-        </ul>
+        </ul class>
    </header>
     <img class="roupa1" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif">
 
