--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
  <body>
     <header>
-        <H1>KTX MELHOR LOJAS DE ROUPAS</H1>
+        <H1 class="titulo">KTX MELHOR LOJAS DE ROUPAS</H1 class>
         <ul class="KTX">
             <li>KTX</li>
         </ul class>
