--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
             <h3 class="estudante-nome">Thais</h3>
-            <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
+            <a href="https://youtu.be/44XYEeD1A1U?si=qVxMHc6axpPUiyzS"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
