--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="foto da rafa">
-            <h3 class="estudante-nome">Rafaela</h3>
+            <img class="estudante-imagem" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="roupa1">
+            <h3 class="estudante-nome">R$99,99</h3>
             <a href="https://youtube.com/@TNTSportsBR?si=QTlo4DDdaTpdk2i-"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
