--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="IMG-20240311-WA0026-removebg-preview.png" alt="logo">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Configl</li>
             <li class="cabecalho-lista-item">Perfil</li>
