--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="IMG-20240311-WA0026-removebg-preview.png" alt="logo">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Configl</li>
+            <li class="cabecalho-lista-item">Config</li>
             <li class="cabecalho-lista-item">Perfil</li>
         </ul>
     </header>
