--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a loja</h2>
-            <p class="escola-texto-um">A loja KTX foi fundada em 1945 na Alemanha em um periodo caotico da historia.</p>
+            <p class="escola-texto-um">A loja KTX foi fundada na Alemanha.</p>
             <p class="escola-texto-dois">A roupa mais vendido é a camiseta roxa</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
