--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="IMG-20240311-WA0026-removebg-preview.png" alt="logo">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Config</li>
-            <li class="cabecalho-lista-item">Perfil</li>
+            <li class="item1">Config</li>
+            <li class="item2">Perfil</li>
         </ul>
     </header>
     <section class="escola">
