--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             }
             
             .cabecalho-lista-item{
-                display: inline-block;
-  justify-content: flex-end;
-  align-items: flex-end;
-  padding: 24px 0;
-    margin: 0 160px;
-    font-size: 16px;
+                display: flex;
+        justify-content: flex-end;
+       align-items: flex-end;
+        padding: 24px 0;
+        margin: 0 160px;
+         font-size: 16px;
             }
             
             .escola-imagem{
