--- a/index.html
+++ b/index.html
@@ -76,14 +76,12 @@
         <div class="produtos-div">
             <img class="roupa-imagem" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="roupa1">
             <h3 class="estudante-nome">R$99,99</h3>
-            <a href="https://youtube.com/@TNTSportsBR?si=QTlo4DDdaTpdk2i-"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
-            <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.pichau.com.br/?gad_source=1&gclid=EAIaIQobChMIosKMiuC_hQMVIxutBh1UPQyxEAAYASAAEgJUO_D_BwE"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Thais.jpg" alt="foto da thais">
             <h3 class="estudante-nome">Thais</h3>
-           <button class="estudante-icone">compre</button>
+           <button class="button-icone">compre</button>
         </div>
 
     </div>
