--- a/index.html
+++ b/index.html
@@ -28,60 +28,46 @@
         <div class="produtos">
         <span></span>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
+            <img class="roupa-imagem" src="Marcelo.jpeg" alt="foto da roupa">
             <h3 class="estudante-nome">Marcelo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <<a href=""><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Gabi.jpg" alt="foto da gabi">
+            <img class="roupa-imagem" src="Gabi.jpg" alt="foto da roupa">
             <h3 class="estudante-nome">Gabriela</h3>
-            <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href=""><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Liz.jpg" alt="foto da lizandra">
+            <img class="roupa-imagem" src="Liz.jpg" alt="foto da roupa">
             <h3 class="estudante-nome">Lizandra</h3>
-            <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href=""><button class="button-icone">compre</button></a>
         </div>
         <span></span>
         <span></span>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Joice.jpg" alt="foto da joice">
-            <h3 class="estudante-nome">Joice</h3>
-            <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
+            <img class="roupa-imagem" src="Joice.jpg" alt="foto da roupa">
+            <a href=""><button class="button-icone">compre</button></a>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Maria.jpg" alt="foto da maria">
+            <img class="roupa-imagem" src="Maria.jpg" alt="foto daroupa">
             <h3 class="estudante-nome">Maria</h3>
-            <a href="https://github.com/MagePSR"><img class="estudante-icone" src="youtube.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href=""><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Olivia.jpg" alt="foto da olhe">
+            <img class="roupa-imagem" src="Olivia.jpg" alt="foto da roupa">
             <h3 class="estudante-nome">Olivia</h3>
-            <img class="estudante-icone" src="youtube.png" alt="icone github">
-            <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href=""><button class="button-icone">compre</button></a>
         </div>
         <span></span>
         <span></span>
         <div class="produtos-div">
             <img class="roupa-imagem" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="roupa1">
             <h3 class="estudante-nome">R$99,99</h3>
-            <a href="https://www.pichau.com.br/?gad_source=1&gclid=EAIaIQobChMIosKMiuC_hQMVIxutBh1UPQyxEAAYASAAEgJUO_D_BwE"><button class="button-icone">compre</button></a>
+            <a href=""><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Thais.jpg" alt="foto da thais">
+            <img class="roupa-imagem" src="Thais.jpg" alt="foto da roupa">
             <h3 class="estudante-nome">Thais</h3>
-           <button class="button-icone">compre</button>
+            <a href=""><button class="button-icone">compre</button></a>
         </div>
 
     </div>
