--- a/index.html
+++ b/index.html
@@ -64,12 +64,8 @@
             <h3 class="estudante-nome">R$99,99</h3>
             <a href=""><button class="button-icone">compre</button></a>
         </div>
-        <div class="produtos-div">
-            <img class="roupa-imagem" src="Thais.jpg" alt="foto da roupa">
-            <h3 class="estudante-nome">Thais</h3>
-            <a href=""><button class="button-icone">compre</button></a>
-        </div>
-
+<span></span>
+<span></span>
     </div>
     </section>
     <footer class="rodape">
