--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
     <section class="conteudo">
         <h2 class="conteudo-titulo">Quais são nossos produtos</h2>
-        <div class="produtos">
+        <div class="estudante-todos">
         <span></span>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Marcelo.jpeg" alt="foto da roupa">
@@ -52,14 +52,14 @@
             <h3 class="estudante-nome">Maria</h3>
             <a href=""><button class="button-icone">compre</button></a>
         </div>
-        
+
         <div class="produtos-div">
             <img class="roupa-imagem" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="roupa1">
             <h3 class="estudante-nome">R$99,99</h3>
             <a href=""><button class="button-icone">compre</button></a>
         </div>
         <span></span>
-        <span></span> 
+       
 
     </div>
     </section>
