--- a/index.html
+++ b/index.html
@@ -30,33 +30,33 @@
         <div class="produtos-div">
             <img class="roupa-imagem" src="Marcelo.jpeg" alt="foto da roupa">
             <h3 class="estudante-nome">Marcelo</h3>
-            <<a href=""><button class="button-icone">compre</button></a>
+            <<a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Gabi.jpg" alt="foto da roupa">
             <h3 class="estudante-nome">Gabriela</h3>
-            <a href=""><button class="button-icone">compre</button></a>
+            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Liz.jpg" alt="foto da roupa">
             <h3 class="estudante-nome">Lizandra</h3>
-            <a href=""><button class="button-icone">compre</button></a>
+            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <span></span>
         <span></span>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Joice.jpg" alt="foto da roupa">
-            <a href=""><button class="button-icone">compre</button></a>
+            <a href="">https://szvav.vercel.app/<button class="button-icone">compre</button></a>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Maria.jpg" alt="foto daroupa">
             <h3 class="estudante-nome">Maria</h3>
-            <a href=""><button class="button-icone">compre</button></a>
+            <a href="">https://szvav.vercel.app/<button class="button-icone">compre</button></a>
         </div>
 
         <div class="produtos-div">
             <img class="roupa-imagem" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="roupa1">
             <h3 class="estudante-nome">R$99,99</h3>
-            <a href=""><button class="button-icone">compre</button></a>
+            <a href="">https://szvav.vercel.app/<button class="button-icone">compre</button></a>
         </div>
         <span></span>
        
