--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
         <span></span>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Joice.jpg" alt="foto da roupa">
-            <a href="">https://szvav.vercel.app/<button class="button-icone">compre</button></a>
+            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
+
         <div class="produtos-div">
             <img class="roupa-imagem" src="Maria.jpg" alt="foto daroupa">
             <h3 class="estudante-nome">Maria</h3>
-            <a href="">https://szvav.vercel.app/<button class="button-icone">compre</button></a>
+            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
 
         <div class="produtos-div">
             <img class="roupa-imagem" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="roupa1">
             <h3 class="estudante-nome">R$99,99</h3>
-            <a href="">https://szvav.vercel.app/<button class="button-icone">compre</button></a>
+            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <span></span>
        
