--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
        
         <div class="produtos-div">
             <img class="roupa-imagem" src="Joice.jpg" alt="foto da roupa">
-            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
+            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>]
+            
+        </div>
 
         <div class="produtos-div">
             <img class="roupa-imagem" src="Maria.jpg" alt="foto daroupa">
