--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="produtos-div">
             <img class="roupa-imagem" src="Marcelo.jpeg" alt="foto da roupa">
             <h3 class="estudante-nome">Marcelo</h3>
-            <<a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
+            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Gabi.jpg" alt="foto da roupa">
@@ -46,7 +46,8 @@
        
         <div class="produtos-div">
             <img class="roupa-imagem" src="Joice.jpg" alt="foto da roupa">
-            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>]
+            <h3 class="estudante-nome">R$109,99</h3>
+            <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
             
         </div>
 
