--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto daroupa">
+            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto daroupa"></a>
             <h3 class="estudante-nome">Maria</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
