--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
         <div class="estudante-todos">
         <span></span>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Marcelo.jpeg" alt="foto da roupa">
+            <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
             <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Gabi.jpg" alt="foto da roupa">
+            <img class="roupa-imagem" src="Slide4-removebg-preview.png" alt="foto da roupa">
             <h3 class="estudante-nome">Gabriela</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Liz.jpg" alt="foto da roupa">
+            <img class="roupa-imagem" src="Slide3-removebg-preview.png" alt="foto da roupa">
             <h3 class="estudante-nome">Lizandra</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <span></span>
        
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Joice.jpg" alt="foto da roupa">
+            <img class="roupa-imagem" src="Slide1.jpg" alt="foto da roupa">
             <h3 class="estudante-nome">R$109,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
             
