--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Slide4-removebg-preview.png" alt="foto da roupa">
+            <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
             <h3 class="estudante-nome">Gabriela</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Slide3-removebg-preview.png" alt="foto da roupa">
+            <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
             <h3 class="estudante-nome">Lizandra</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <span></span>
        
         <div class="produtos-div">
-            <img class="roupa-imagem" src="Slide1.jpg" alt="foto da roupa">
+            <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
             <h3 class="estudante-nome">R$109,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
             
@@ -58,7 +58,7 @@
         </div>
 
         <div class="produtos-div">
-            <img class="roupa-imagem" src="vistas-dianteiras-e-traseiras-de-um-modelo-de-roupa-roxa-men-tshrit-isolado-em-fundo-branco_964427-1517.avif" alt="roupa1">
+            <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="roupa1">
             <h3 class="estudante-nome">R$99,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
