--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <span></span>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
-            <h3 class="estudante-nome">109,99</h3>
+            <h3 class="estudante-nome">R$109,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
-            <h3 class="estudante-nome">106,99</h3>
+            <h3 class="estudante-nome">R$106,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
             <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
-            <h3 class="estudante-nome">120,99</h3>
+            <h3 class="estudante-nome">R$120,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <span></span>
@@ -53,7 +53,7 @@
 
         <div class="produtos-div">
             <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto daroupa"></a>
-            <h3 class="estudante-nome">110,99</h3>
+            <h3 class="estudante-nome">R$110,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
 
