--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="IMG-20240311-WA0026-removebg-preview.png" alt="logo">
+        <div>configuracao
         <img class="config" src="definicoes.png" alt="config">
+    </div>
     </header>
     <section class="Loja">
         <div class="loja-div-conteudo">
