--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="IMG-20240311-WA0026-removebg-preview.png" alt="logo">
         <img class="config" src="definicoes.png" alt="config">
+        <img class="perfil" src="do-utilizador.png" alt="Perfil"
     </header>
     <section class="Loja">
         <div class="loja-div-conteudo">
