--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
         <div class="estudante-todos">
         <span></span>
         <div class="produtos-div">
-            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"></a><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
+            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa"></a>
             <h3 class="estudante-nome">R$109,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"></a><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
+            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa"></a>
             <h3 class="estudante-nome">R$106,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
-            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
+            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa"></a>
             <h3 class="estudante-nome">R$120,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <span></span>
        
         <div class="produtos-div">
-            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa">
+            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa"></a>
             <h3 class="estudante-nome">R$109,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
             
@@ -63,7 +63,7 @@
         </div>
 
         <div class="produtos-div">
-            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="roupa1">
+            <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="roupa1"> </a>
             <h3 class="estudante-nome">R$99,99</h3>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
