--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <a href="https://site-turma-2-d-ten.vercel.app/"><img class="cabecalho-imagem" src="IMG-20240311-WA0026-removebg-preview.png" alt="logo"></a>
+        <img class="cabecalho-imagem" src="IMG-20240311-WA0026-removebg-preview.png" alt="logo">
         <img class="config" src="definicoes.png" alt="config">
         <img class="perfil" src="do-utilizador.png" alt="Perfil">
     </header>
