--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="loja-texto-um">A loja KTX foi fundada na Alemanha, rapidamente ficou famoso por sua qualidade impecavel dos produtos.</p>
             <p class="loja-texto-dois">As roupas de KTX são famosas no mundo inteiro</p>
         </div>
-        <img class="escola-imagem" src="_c84c8c25-2695-44cf-bd65-a52c16a116e0-removebg-preview-removebg-preview.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="KTX.png" alt="imagem que representa a loja">
     </section>
     <section class="conteudo">
         <div class="barra-pesquisa">
