--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
     
     <footer class="rodape">
-        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+        <img class="rodape-imagem"src="KTX.png" alt="logo da alura start">
     </footer>
 </body>
 </html>
