--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     
     <footer class="rodape">
         <img class="rodape-imagem"src="KTX.png" alt="logo da alura start">
+     <img class="rodape-imagem" src="instagram.png" alt="imagem instagram"
     </footer>
 </body>
 </html>
