--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
     
     <footer class="rodape">
         <img class="rodape-imagem"src="KTX.png" alt="logo da alura start">
-     <img class="instagram-imagem" src="instagram.png" alt="imagem instagram"
-    </footer>
+     <img class="instagram-imagem" src="instagram.png" alt="imagem instagram">
+    <img class="tiktok-imagem" src="tiktok.png" alt="tiktok imagem">
+    <img class="youtube-imagem" src="youtube.png" alt="youtube imagem">
+     </footer>
 </body>
 </html>
