--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     
     <footer class="rodape">
         <img class="rodape-imagem"src="KTX.png" alt="logo da alura start">
-     <img class="instagram-imagem" src="instagram.png" alt="imagem instagram">
+     <a href="https://www.instagram.com/jose.wowl?igsh=MWFobGtob3loMTd4ag=="><img class="instagram-imagem" src="instagram.png" alt="imagem instagram"></a>
     <img class="tiktok-imagem" src="tiktok.png" alt="tiktok imagem">
     <img class="youtube-imagem" src="youtube.png" alt="youtube imagem">
      </footer>
