--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <div class="produtos-div">
             <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa"></a>
             <h3 class="preço-nome">R$109,99</h3>
+            <h4 class="preço-nome">Camiseta KTX</h4>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
             
         </div>
