--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
         <div class="produtos-div">
             <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa"></a>
             <h3 class="estudante-nome">R$109,99</h3>
+            <h4 class="preço-nome">Camiseta KTX</h4>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
             <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa"></a>
             <h3 class="estudante-nome">R$106,99</h3>
+            <h4 class="preço-nome">Camiseta KTX</h4>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <div class="produtos-div">
             <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto da roupa"></a>
             <h3 class="estudante-nome">R$120,99</h3>
+            <h4 class="preço-nome">Camiseta KTX</h4>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
         <span></span>
@@ -60,12 +63,14 @@
         <div class="produtos-div">
             <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"><img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="foto daroupa"></a>
             <h3 class="estudante-nome">R$110,99</h3>
+            <h4 class="preço-nome">Camiseta KTX</h4>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
 
         <div class="produtos-div">
             <a href="https://site-turma-2-d-ten.vercel.app/Slide2-removebg-preview.png"> <img class="roupa-imagem" src="Slide2-removebg-preview.png" alt="roupa1"> </a>
             <h3 class="estudante-nome">R$99,99</h3>
+            <h4 class="preço-nome">Camiseta KTX</h4>
             <a href="https://szvav.vercel.app/"><button class="button-icone">compre</button></a>
         </div>
        
