--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <img class="rodape-imagem"src="KTX.png" alt="logo da alura start">
      <a href="https://www.instagram.com/jose.wowl?igsh=MWFobGtob3loMTd4ag=="><img class="instagram-imagem" src="instagram.png" alt="imagem instagram"></a>
     <img class="tiktok-imagem" src="tiktok.png" alt="tiktok imagem">
-    <img class="youtube-imagem" src="youtube.png" alt="youtube imagem">
+    <a href="https://www.youtube.com/watch?v=Jr6LyMe5BJo"><img class="youtube-imagem" src="youtube.png" alt="youtube imagem"></a>
      </footer>
 </body>
 </html>
