--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KTX a melhor loja de roupa do Mundoo!!!!!!deus</title>
+    <img src="IMG-20240311-WA0026-removebg-preview.png" alt="sla">
+    <title>KTX a melhor loja de roupa do Mundoo!!!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,8 +20,8 @@
     <section class="Loja">
         <div class="loja-div-conteudo">
             <h2 class="loja-titulo">Sobre a loja</h2>
-            <p class="loja-texto-um">A loja KTX foi fundada na Alemanha, rapidamente ficou famoso por sua qualidade impecavel dos produtos.</p>
-            <p class="loja-texto-dois">As roupas de KTX são famosas no mundo inteiro</p>
+            <p class="loja-texto-um">A loja KTX foi fundada na Alemanha, rapidamente ficou famoso por sua qualidade impecável dos produtos.</p>
+            <p class="loja-texto-dois">As roupas de KTX são famosas no mundo inteiro!!</p>
         </div>
         <img class="escola-imagem" src="KTX.png" alt="imagem que representa a loja">
     </section>
